# n-grams

./: .gitignore  ChangeLog.md  README.md  nlp.cabal  package.yaml  sample.txt  ship-digram.csv  ship.txt  stack.yaml  whitman.txt
app/: Main.hs
src/: Data.hs  Exec.hs  Frequency.hs  Lib.hs  Normalize.hs  Utility.hs
tr-0.1.0.0/: tr.cabal
tr-0.1.0.0/app/: Main.hs
tr-0.1.0.0/src/: Tr.hs
tr-0.1.0.0/test/: Spec.hs
